# TNN

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_CH.md  README_EN.md  README_EVA.md  sync_tnn.sh
benchmark/benchmark_android/benchmark_app/benchmark/: CMakeLists.txt  build.gradle  proguard-rules.pro
examples/android/demo/: CMakeLists.txt  build.gradle
examples/armlinux/: CMakeLists.txt  Readme.md  build.sh  build_aarch64.sh  build_armhf.sh
examples/armlinux/include/: tnn_inst.h  utils.h
examples/armlinux/src/: main.cc  main.cpp  tnn_inst.cpp
examples/armlinux/src/TNNFaceDetector/: TNNFaceDetector.cc
examples/armlinux/src/TNNImageClassify/: TNNImageClassify.cc
examples/cuda/: CMakeLists.txt  build_linux.sh  demo.cc
examples/cuda/build_cuda_linux/: demo_cuda_facedetector  demo_cuda_imageclassify
examples/cuda/src/BertReadingComprehension/: BertReadingComprehension.cc
examples/cuda/src/TNNFaceDetector/: TNNFaceDetector.cc
examples/cuda/src/TNNImageClassify/: TNNImageClassify.cc
examples/linux/: .gitignore  CMakeLists.txt  Readme.md  build_aarch64_linux.sh  build_linux.sh  build_openvino.sh
examples/linux/atlas/: CMakeLists.txt  build_atlas.sh
examples/linux/cross/: CMakeLists.txt  build_aarch64_linux.sh  build_armhf_linux.sh
examples/linux/cuda/: CMakeLists.txt  build_linux.sh
examples/linux/include/: utils.h
examples/linux/src/: face_detector.cc  flags.cc  flags.h  image_classify.cc  main.cc
examples/linux/src/BertReadingComprehension/: BertReadingComprehension.cc
examples/linux/src/TNNBlazePose/: TNNBlazePose.cc
examples/linux/src/TNNFaceAligner/: TNNFaceAligner.cc
examples/linux/src/TNNFaceDetector/: TNNFaceDetector.cc
examples/linux/src/TNNHairSegmentation/: TNNHairSegmentation.cc
examples/linux/src/TNNImageClassify/: TNNImageClassify.cc
examples/linux/src/TNNImageClassifyOpenGL/: TNNImageClassifyOpenGL.cc
examples/linux/src/TNNNanodetDetector/: TNNNanodetDetector.cc
examples/linux/src/TNNObjectDetector/: TNNObjectDetector.cc
examples/linux/src/TNNOcrDetector/: CvText.cc  CvText.h  TNNOcrDetector.cc
examples/linux/src/TNNSSDDetector/: TNNSSDDetector.cc
examples/linux/src/TNNSkeletonDetector/: TNNSkeletonDetector.cc
examples/linux/src/TNNWebCamBasedDemo/: webcam_demo.cc  worker.cc  worker.h
examples/linux/x86/: CMakeLists.txt  build_linux.sh  build_linux_native.sh  build_linux_openvino.sh  build_macos.sh
examples/linux/x86/build_linux_native/: demo_x86_facedetector  demo_x86_imageclassify  demo_x86_nanodet  demo_x86_objectdetector  demo_x86_readingcomprehension
examples/openvino/: CMakeLists.txt
examples/openvino/src/: main.cc
examples/x86/: CMakeLists.txt  build_linux.sh  build_macos.sh  build_msvc.bat
examples/x86/include/: macro.h  utils.h
examples/x86/src/BertReadingComprehension/: BertReadingComprehension.cc
examples/x86/src/TNNFaceDetector/: TNNFaceDetector.cc
examples/x86/src/TNNImageClassify/: TNNImageClassify.cc
examples/x86/src/TNNObjectDetector/: TNNObjectDetector.cc
examples/x86/src/TNNWebCamBasedDemo/: webcam_demo.cc  worker.cc  worker.h
source/tnn/device/arm/: CMakeLists.txt  arm_blob_converter.cc  arm_blob_converter.h  arm_common.h  arm_context.cc  arm_context.h  arm_device.cc  arm_device.h  arm_mat_converter.cc  arm_mat_converter.h  arm_mat_util.cc  arm_mat_util.h  arm_util.cc  arm_util.h
source/tnn/device/atlas/: CMakeLists.txt  atlas_blob_converter.cc  atlas_blob_converter.h  (+24 more)
test/: CMakeLists.txt  flags.cc  flags.h  test.cc  test.h  test_utils.cc  test_utils.h  timer.cc  timer.h
test/benchmark/: CMakeLists.txt  benchmark.cc
test/matcher_test/: CMakeLists.txt  main.cc
test/pytnn/: test.py  test_raw_api.py  test_simple_api.py  test_tiacc.py
test/unit_test/: CMakeLists.txt  blob_converter_test.cc  blob_converter_test.h  mat_converter_test.cc  mat_converter_test.h  unit_test.cc  unit_test_common.cc  unit_test_common.h  unit_test_macro.h
test/unit_test/grad_test/: a.cc  grad_test.cc  grad_test.h  test_binary_grad.cc  test_inner_product_grad.cc  test_tool.cc  test_tool.h
test/unit_test/layer_test/: layer_test.cc  layer_test.h  layer_test_for_metal.mm  layer_test_utils.cc  layer_test_utils.h  test_abs_layer.cc  test_acos_layer.cc  test_add_layer.cc  test_arg_max_or_min_layer.cc  test_asin_layer.cc  test_atan_layer.cc  test_batch_norm_layer.cc  test_binary_layer.cc  test_binary_layer.h  test_ceil_layer.cc  test_clip_layer.cc  test_concat_layer.cc  test_conv1d_layer.cc  test_conv_3d_layer.cc  test_conv_layer.cc  test_conv_quant_layer.cc  test_cos_layer.cc  test_deconv_layer.cc  test_div_layer.cc  test_elu_layer.cc  test_equal_layer.cc  test_exp_layer.cc  test_floor_layer.cc  test_gelu_layer.cc  test_glu_layer.cc  test_grid_sample_layer.cc  test_group_norm_layer.cc  test_hard_sigmoid_layer.cc  test_hard_swish_broadcast_layer.cc  test_hard_swish_layer.cc  test_hdrguide_layer.cc  test_innerproduct_int8_layer.cc  test_innerproduct_layer.cc  test_instance_norm_layer.cc  test_inverse_layer.cc  (+53 more)
test/unit_test/utils/: network_helpers.cc  network_helpers.h
tools/converter/: CMakeLists.txt  build.sh
tools/converter/source/: tnn_converter.cc
tools/dynamic_range_quantization/: CMakeLists.txt  dynamic_range_quantization.cc  dynamic_range_quantization.h  flags.cc  flags.h  main.cc  utils.cc  utils.h
tools/evaluation/: CMakeLists.txt  README.md  generate_validation_labels.py  image_classifier_sdk_eval.cc  image_classifier_sdk_eval.h  image_classify_eval.cc  val_id.txt
tools/fake_quantization/: CMakeLists.txt  fake_quantization.cc  fake_quantization.h  flags.h  main.cc
tools/model_check/: CMakeLists.txt  flags.cc  flags.h  main.cc  model_checker.cc  model_checker.h
tools/model_convert/: CMakeLists.txt  main.cc  model_converter.cc  model_converter.h
tools/onnx2tnn/onnx-converter/: CMakeLists.txt  __init__.py  build.sh  onnx2tnn.py  onnx2tnn_convert.cc  onnx_model_cheker.py  version.py
tools/quantization/: CMakeLists.txt  calibration.cc  calibration.h  calibration_common.h  quantize.cc  scale_calculator.cc  scale_calculator.h
(+4046 files in other folders)
